--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -1,4 +1,3 @@
-{% extends 'blog/base.html' %}
 {% load static %}
 <html>
     <head>
@@ -10,23 +9,13 @@
     </head>
     <body>
         <div class="page-header">
-            <h1><a href="/">Blog of Alexandra Zakharova</a></h1>
+            <h1><a href="/">Django Girls Blog</a></h1>
         </div>
-
         <div class="content container">
             <div class="row">
                 <div class="col-md-8">
-                    {% block content %}
-                    {% for post in posts %}
-                        <div class="post">
-                            <div class="date">
-                                <p>published: {{ post.published_date }}</p>
-                            </div>
-                            <h2><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></h2>
-                            <p>{{ post.text|linebreaksbr }}</p>
-                        </div>
-                    {% endfor %}
-                    {% endblock %}
+                {% block content %}
+                {% endblock %}
                 </div>
             </div>
         </div>
